--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,7 +23,7 @@
         android:layout_marginBottom="6dp"
         android:layout_marginTop="150dp"
         android:gravity="left"
-        android:text="Task_Session2"
+        android:text="Task_2"
         android:textColor="#E91E63"
         android:textSize="16sp"
         android:textStyle="bold" />
@@ -36,7 +36,7 @@
         android:layout_marginRight="6dp"
         android:layout_marginBottom="6dp"
         android:gravity="left"
-        android:text="Task_Session4"
+        android:text="Task_4"
         android:textColor="#E91E63"
         android:textSize="16sp"
         android:textStyle="bold" />
@@ -49,7 +49,7 @@
         android:layout_marginRight="6dp"
         android:layout_marginBottom="6dp"
         android:gravity="left"
-        android:text="Task_Session5"
+        android:text="Task_5"
         android:textColor="#E91E63"
         android:textSize="16sp"
         android:textStyle="bold" />
@@ -62,10 +62,23 @@
         android:layout_marginRight="6dp"
         android:layout_marginBottom="6dp"
         android:gravity="left"
-        android:text="Task_Session6"
+        android:text="Task_6"
         android:textColor="#E91E63"
         android:textSize="16sp"
         android:textStyle="bold" />
+
+    <Button
+        android:id="@+id/btnTaskS71"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="6dp"
+        android:layout_marginRight="6dp"
+        android:layout_marginBottom="6dp"
+        android:gravity="left"
+        android:text="Task7-1"
+        android:textColor="#E91E63"
+        android:textSize="16sp"
+        android:textStyle="bold"/>
 
 
 
