--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -75,12 +75,61 @@
         android:layout_marginRight="6dp"
         android:layout_marginBottom="6dp"
         android:gravity="left"
-        android:text="Task7-1"
+        android:text="Task7"
         android:textColor="#E91E63"
         android:textSize="16sp"
         android:textStyle="bold"/>
 
+    <Button
 
+        android:id="@+id/btnTaskS81"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="6dp"
+        android:layout_marginRight="6dp"
+        android:layout_marginBottom="6dp"
+        android:gravity="left"
+        android:text="Task8-1"
+        android:textColor="#E91E63"
+        android:textSize="16sp"
+        android:textStyle="bold"/>
 
+    <Button
+        android:id="@+id/btnTaskS82"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="6dp"
+        android:layout_marginRight="6dp"
+        android:layout_marginBottom="6dp"
+        android:gravity="left"
+        android:text="Task8-2"
+        android:textColor="#E91E63"
+        android:textSize="16sp"
+        android:textStyle="bold"/>
 
+    <Button
+        android:id="@+id/btnTaskS83"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="6dp"
+        android:layout_marginRight="6dp"
+        android:layout_marginBottom="6dp"
+        android:gravity="left"
+        android:text="Task8-3"
+        android:textColor="#E91E63"
+        android:textSize="16sp"
+        android:textStyle="bold"/>
+
+    <Button
+        android:id="@+id/btnTaskS84"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="6dp"
+        android:layout_marginRight="6dp"
+        android:layout_marginBottom="6dp"
+        android:gravity="left"
+        android:text="Task8-4"
+        android:textColor="#E91E63"
+        android:textSize="16sp"
+        android:textStyle="bold"/>
 </LinearLayout>
